--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
+<meta name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Space Shooter</title>
 
 <style>
@@ -27,51 +28,67 @@ canvas {
 <canvas id="game"></canvas>
 
 <script>
+// ================= CANVAS =================
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
 function resize() {
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+  const ratio = 9 / 16;
+  const w = window.innerWidth;
+  const h = window.innerHeight;
+  if (w / h > ratio) {
+    canvas.height = h;
+    canvas.width = h * ratio;
+  } else {
+    canvas.width = w;
+    canvas.height = w / ratio;
+  }
 }
 window.addEventListener("resize", resize);
 resize();
 
-// ===== СОСТОЯНИЯ =====
+// ================= STATES =================
 const MENU = 0;
 const GAME = 1;
 const GAME_OVER = 2;
 let state = MENU;
 
-// ===== ИГРОК =====
-let player = {
+// ================= IMAGES =================
+const playerImg = new Image();
+playerImg.src = "player.png";
+
+const enemyImg = new Image();
+enemyImg.src = "enemy.png";
+
+// ================= PLAYER =================
+const player = {
   x: 0,
   y: 0,
-  w: 40,
-  h: 40,
+  w: 48,
+  h: 48,
   speed: 6
 };
 
-// ===== ИГРА =====
+// ================= GAME =================
 let bullets = [];
 let enemies = [];
 let score = 0;
 let lastShot = 0;
 
-// ===== ЗВЁЗДЫ =====
-let stars = Array.from({length: 100}, () => ({
+// ================= STARS =================
+const stars = Array.from({ length: 120 }, () => ({
   x: Math.random(),
   y: Math.random(),
   s: Math.random() * 2 + 1
 }));
 
-// ===== УПРАВЛЕНИЕ =====
+// ================= INPUT =================
 let touchX = null;
+
 canvas.addEventListener("touchstart", e => {
   e.preventDefault();
   touchX = e.touches[0].clientX;
-  if (state === MENU) startGame();
-  if (state === GAME_OVER) state = MENU;
+  if (state !== GAME) startGame();
 });
 
 canvas.addEventListener("touchmove", e => {
@@ -81,103 +98,117 @@ canvas.addEventListener("touchmove", e => {
 
 canvas.addEventListener("touchend", () => touchX = null);
 
-// ===== ЗАПУСК =====
+window.addEventListener("keydown", e => {
+  if ((e.key === "r" || e.key === "R") && state !== GAME) {
+    startGame();
+  }
+});
+
+// ================= START =================
 function startGame() {
   player.x = canvas.width / 2 - player.w / 2;
-  player.y = canvas.height - 80;
+  player.y = canvas.height - player.h - 20;
   bullets = [];
   enemies = [];
   score = 0;
+  lastShot = 0;
   state = GAME;
 }
 
-// ===== ОТРИСОВКА =====
+// ================= DRAW =================
 function drawStars() {
   ctx.fillStyle = "white";
   for (let s of stars) {
-    s.y += s.s / 100;
+    s.y += s.s / 120;
     if (s.y > 1) s.y = 0;
     ctx.fillRect(s.x * canvas.width, s.y * canvas.height, s.s, s.s);
   }
 }
 
-function drawPlayer() {
-  ctx.fillStyle = "orange";
-  ctx.fillRect(player.x, player.y, player.w, player.h);
+function drawCentered(text, y, size = 32) {
+  ctx.fillStyle = "white";
+  ctx.font = `${size}px sans-serif`;
+  ctx.textAlign = "center";
+  ctx.fillText(text, canvas.width / 2, y);
 }
 
-function drawBullets() {
-  ctx.fillStyle = "yellow";
-  bullets.forEach(b => ctx.fillRect(b.x, b.y, 4, 10));
-}
-
-function drawEnemies() {
-  ctx.fillStyle = "red";
-  enemies.forEach(e => ctx.fillRect(e.x, e.y, 40, 30));
-}
-
-// ===== ЛОГИКА =====
+// ================= UPDATE =================
 function update() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
   drawStars();
 
   if (state === MENU) {
-    ctx.fillStyle = "white";
-    ctx.font = "40px sans-serif";
-    ctx.fillText("SPACE SHOOTER", canvas.width/2 - 150, canvas.height/2 - 40);
-    ctx.font = "20px sans-serif";
-    ctx.fillText("Tap to Start", canvas.width/2 - 60, canvas.height/2 + 20);
+    drawCentered("SPACE SHOOTER", canvas.height / 2 - 40, 42);
+    drawCentered("Press R or TAP to Start", canvas.height / 2 + 20, 18);
     return;
   }
 
   if (state === GAME) {
     if (touchX !== null) {
-      player.x += (touchX - player.x - player.w/2) * 0.1;
+      player.x += (touchX - player.x - player.w / 2) * 0.15;
     }
 
-    if (Date.now() - lastShot > 300) {
-      bullets.push({x: player.x + player.w/2 - 2, y: player.y});
+    player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
+
+    if (Date.now() - lastShot > 350) {
+      bullets.push({
+        x: player.x + player.w / 2 - 2,
+        y: player.y
+      });
       lastShot = Date.now();
     }
 
     bullets.forEach(b => b.y -= 8);
-    bullets = bullets.filter(b => b.y > 0);
+    bullets = bullets.filter(b => b.y > -20);
 
     if (Math.random() < 0.02) {
-      enemies.push({x: Math.random() * (canvas.width - 40), y: -30});
+      enemies.push({
+        x: Math.random() * (canvas.width - 48),
+        y: -60
+      });
     }
 
     enemies.forEach(e => e.y += 3);
 
     for (let e of enemies) {
       if (e.y > canvas.height) state = GAME_OVER;
+
       for (let b of bullets) {
-        if (b.x > e.x && b.x < e.x + 40 && b.y > e.y && b.y < e.y + 30) {
-          e.y = canvas.height + 100;
-          b.y = -100;
+        if (
+          b.x > e.x &&
+          b.x < e.x + 48 &&
+          b.y > e.y &&
+          b.y < e.y + 48
+        ) {
+          e.y = canvas.height + 200;
+          b.y = -200;
           score++;
         }
       }
     }
 
-    drawPlayer();
-    drawBullets();
-    drawEnemies();
+    ctx.drawImage(playerImg, player.x, player.y, player.w, player.h);
+    bullets.forEach(b => {
+      ctx.fillStyle = "yellow";
+      ctx.fillRect(b.x, b.y, 4, 10);
+    });
+    enemies.forEach(e => {
+      ctx.drawImage(enemyImg, e.x, e.y, 48, 48);
+    });
 
     ctx.fillStyle = "white";
-    ctx.font = "20px sans-serif";
-    ctx.fillText("Score: " + score, 10, 30);
+    ctx.font = "18px sans-serif";
+    ctx.textAlign = "left";
+    ctx.fillText("Score: " + score, 10, 24);
   }
 
   if (state === GAME_OVER) {
-    ctx.fillStyle = "red";
-    ctx.font = "40px sans-serif";
-    ctx.fillText("GAME OVER", canvas.width/2 - 120, canvas.height/2);
-    ctx.font = "20px sans-serif";
-    ctx.fillText("Tap to Menu", canvas.width/2 - 60, canvas.height/2 + 40);
+    drawCentered("GAME OVER", canvas.height / 2 - 20, 42);
+    drawCentered("Press R or TAP", canvas.height / 2 + 30, 18);
   }
 }
 
+// ================= LOOP =================
 function loop() {
   update();
   requestAnimationFrame(loop);
