--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Space Shooter</title>
 
 <style>
@@ -14,7 +13,6 @@ html, body {
   overflow: hidden;
   touch-action: none;
   user-select: none;
-  -webkit-user-select: none;
 }
 canvas {
   display: block;
@@ -33,8 +31,8 @@ const ctx = canvas.getContext("2d");
 
 function resize() {
   const ratio = 9 / 16;
-  const w = window.innerWidth;
-  const h = window.innerHeight;
+  let w = window.innerWidth;
+  let h = window.innerHeight;
   if (w / h > ratio) {
     canvas.height = h;
     canvas.width = h * ratio;
@@ -48,7 +46,9 @@ resize();
 
 // ================= STATES =================
 const MENU = 0;
-const GAME = 1;
+const SETTINGS = 1;
+const GAME = 2;
+const GAME_OVER = 3;
 let state = MENU;
 
 // ================= ASSETS =================
@@ -58,11 +58,29 @@ playerImg.src = "player.png";
 const enemyImg = new Image();
 enemyImg.src = "enemy.png";
 
+// ================= AUDIO =================
+const musicList = [
+  new Audio("music1.mp3"),
+  new Audio("music2.mp3"),
+  new Audio("music3.mp3")
+];
+let musicIndex = 0;
+let musicVolume = 0.3;
+let sfxVolume = 0.4;
+
+musicList.forEach(m => {
+  m.loop = true;
+  m.volume = musicVolume;
+});
+
 const laserSound = new Audio("laser.wav");
 const gameOverSound = new Audio("gameover.wav");
-const music = new Audio("music1.mp3");
-music.loop = true;
-music.volume = 0.3;
+
+function updateSFX() {
+  laserSound.volume = sfxVolume;
+  gameOverSound.volume = sfxVolume;
+}
+updateSFX();
 
 // ================= STORAGE =================
 let record = Number(localStorage.getItem("record")) || 0;
@@ -72,7 +90,8 @@ const player = {
   x: 0,
   y: 0,
   w: 48,
-  h: 48
+  h: 48,
+  speed: 7
 };
 
 // ================= GAME =================
@@ -90,7 +109,8 @@ const stars = Array.from({ length: 120 }, () => ({
 
 // ================= INPUT =================
 let touchX = null;
-let moveDir = 0;
+let left = false;
+let right = false;
 
 canvas.addEventListener("touchstart", e => {
   e.preventDefault();
@@ -106,16 +126,19 @@ canvas.addEventListener("touchmove", e => {
 canvas.addEventListener("touchend", () => touchX = null);
 
 window.addEventListener("keydown", e => {
-  if (e.key === "r" || e.key === "R") {
-    if (state === MENU) startGame();
-  }
-  if (e.key === "ArrowLeft" || e.key === "a") moveDir = -1;
-  if (e.key === "ArrowRight" || e.key === "d") moveDir = 1;
+  if (e.key === "ArrowLeft" || e.key === "a") left = true;
+  if (e.key === "ArrowRight" || e.key === "d") right = true;
+
+  if (e.key === "Enter" && state === MENU) startGame();
+  if (e.key === "Escape") state = MENU;
 });
 
-window.addEventListener("keyup", () => moveDir = 0);
+window.addEventListener("keyup", e => {
+  if (e.key === "ArrowLeft" || e.key === "a") left = false;
+  if (e.key === "ArrowRight" || e.key === "d") right = false;
+});
 
-// ================= START GAME =================
+// ================= START =================
 function startGame() {
   player.x = canvas.width / 2 - player.w / 2;
   player.y = canvas.height - player.h - 20;
@@ -125,8 +148,9 @@ function startGame() {
   lastShot = 0;
   state = GAME;
 
-  music.currentTime = 0;
-  music.play();
+  musicList.forEach(m => m.pause());
+  musicList[musicIndex].currentTime = 0;
+  musicList[musicIndex].play();
 }
 
 // ================= DRAW =================
@@ -139,7 +163,7 @@ function drawStars() {
   }
 }
 
-function drawCenter(text, y, size) {
+function centerText(text, y, size = 32) {
   ctx.fillStyle = "white";
   ctx.font = `${size}px sans-serif`;
   ctx.textAlign = "center";
@@ -152,81 +176,65 @@ function update() {
   drawStars();
 
   if (state === MENU) {
-    drawCenter("SPACE SHOOTER", canvas.height / 2 - 40, 42);
-    drawCenter("Press R or TAP to Start", canvas.height / 2 + 20, 18);
-    drawCenter("Record: " + record, canvas.height / 2 + 50, 16);
+    centerText("SPACE SHOOTER", canvas.height / 2 - 60, 42);
+    centerText("ENTER / TAP - START", canvas.height / 2, 18);
+    centerText("S - SETTINGS", canvas.height / 2 + 30, 16);
+    centerText("RECORD: " + record, canvas.height / 2 + 60, 16);
     return;
   }
 
-  // ===== MOVE =====
-  if (touchX !== null) {
-    player.x += (touchX - player.x - player.w / 2) * 0.15;
-  } else {
-    player.x += moveDir * 6;
-  }
-  player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
+  if (state === GAME) {
+    if (touchX !== null) {
+      player.x += (touchX - player.x - player.w / 2) * 0.15;
+    }
+    if (left) player.x -= player.speed;
+    if (right) player.x += player.speed;
 
-  // ===== SHOOT =====
-  if (Date.now() - lastShot > 350) {
-    bullets.push({ x: player.x + player.w / 2 - 2, y: player.y });
-    laserSound.currentTime = 0;
-    laserSound.play();
-    lastShot = Date.now();
-  }
+    player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
 
-  bullets.forEach(b => b.y -= 8);
-  bullets = bullets.filter(b => b.y > -20);
+    if (Date.now() - lastShot > 300) {
+      bullets.push({ x: player.x + player.w / 2 - 2, y: player.y });
+      laserSound.currentTime = 0;
+      laserSound.play();
+      lastShot = Date.now();
+    }
 
-  // ===== ENEMIES =====
-  if (Math.random() < 0.02) {
-    enemies.push({ x: Math.random() * (canvas.width - 48), y: -60 });
-  }
+    bullets.forEach(b => b.y -= 8);
+    bullets = bullets.filter(b => b.y > -20);
 
-  enemies.forEach(e => e.y += 3);
+    if (Math.random() < 0.015) {
+      enemies.push({ x: Math.random() * (canvas.width - 48), y: -50 });
+    }
 
-  for (let e of enemies) {
-    if (e.y > canvas.height) endGame();
+    enemies.forEach(e => e.y += 2.5);
 
-    for (let b of bullets) {
-      if (
-        b.x > e.x &&
-        b.x < e.x + 48 &&
-        b.y > e.y &&
-        b.y < e.y + 48
-      ) {
-        e.y = canvas.height + 200;
-        b.y = -200;
-        score++;
+    for (let e of enemies) {
+      for (let b of bullets) {
+        if (
+          b.x > e.x &&
+          b.x < e.x + 48 &&
+          b.y > e.y &&
+          b.y < e.y + 48
+        ) {
+          e.y = canvas.height + 200;
+          b.y = -200;
+          score++;
+        }
       }
     }
+
+    ctx.drawImage(playerImg, player.x, player.y, player.w, player.h);
+    bullets.forEach(b => {
+      ctx.fillStyle = "yellow";
+      ctx.fillRect(b.x, b.y, 4, 10);
+    });
+    enemies.forEach(e => ctx.drawImage(enemyImg, e.x, e.y, 48, 48));
+
+    ctx.fillStyle = "white";
+    ctx.font = "18px sans-serif";
+    ctx.textAlign = "left";
+    ctx.fillText("Score: " + score, 10, 24);
   }
-
-  // ===== DRAW OBJECTS =====
-  ctx.drawImage(playerImg, player.x, player.y, player.w, player.h);
-
-  ctx.fillStyle = "yellow";
-  bullets.forEach(b => ctx.fillRect(b.x, b.y, 4, 10));
-
-  enemies.forEach(e => ctx.drawImage(enemyImg, e.x, e.y, 48, 48));
-
-  ctx.fillStyle = "white";
-  ctx.font = "18px sans-serif";
-  ctx.textAlign = "left";
-  ctx.fillText("Score: " + score, 10, 24);
-  ctx.fillText("Record: " + record, 10, 44);
-}
-
-// ================= END GAME =================
-function endGame() {
-  music.pause();
-  gameOverSound.play();
-
-  if (score > record) {
-    record = score;
-    localStorage.setItem("record", record);
-  }
-
-  state = MENU;
 }
 
 // ================= LOOP =================
