--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ html, body {
   background: black;
   overflow: hidden;
   touch-action: none;
-  user-select: none;
 }
 canvas {
   display: block;
@@ -54,7 +53,6 @@ let state = MENU;
 // ================= ASSETS =================
 const playerImg = new Image();
 playerImg.src = "player.png";
-
 const enemyImg = new Image();
 enemyImg.src = "enemy.png";
 
@@ -76,23 +74,18 @@ musicList.forEach(m => {
 const laserSound = new Audio("laser.wav");
 const gameOverSound = new Audio("gameover.wav");
 
-function updateSFX() {
+function updateVolumes() {
+  musicList.forEach(m => m.volume = musicVolume);
   laserSound.volume = sfxVolume;
   gameOverSound.volume = sfxVolume;
 }
-updateSFX();
+updateVolumes();
 
 // ================= STORAGE =================
 let record = Number(localStorage.getItem("record")) || 0;
 
 // ================= PLAYER =================
-const player = {
-  x: 0,
-  y: 0,
-  w: 48,
-  h: 48,
-  speed: 7
-};
+const player = { x: 0, y: 0, w: 48, h: 48 };
 
 // ================= GAME =================
 let bullets = [];
@@ -109,36 +102,34 @@ const stars = Array.from({ length: 120 }, () => ({
 
 // ================= INPUT =================
 let touchX = null;
-let left = false;
-let right = false;
-
 canvas.addEventListener("touchstart", e => {
-  e.preventDefault();
-  touchX = e.touches[0].clientX;
-  if (state === MENU) startGame();
+  const y = e.touches[0].clientY;
+  const x = e.touches[0].clientX;
+  touchX = x;
+
+  if (state === MENU) {
+    if (y > canvas.height * 0.45 && y < canvas.height * 0.55) startGame();
+    if (y > canvas.height * 0.6 && y < canvas.height * 0.7) state = SETTINGS;
+  } else if (state === SETTINGS) {
+    if (y > canvas.height * 0.35 && y < canvas.height * 0.45) musicVolume = Math.max(0, musicVolume - 0.1);
+    if (y > canvas.height * 0.45 && y < canvas.height * 0.55) musicVolume = Math.min(1, musicVolume + 0.1);
+    if (y > canvas.height * 0.55 && y < canvas.height * 0.65) sfxVolume = Math.max(0, sfxVolume - 0.1);
+    if (y > canvas.height * 0.65 && y < canvas.height * 0.75) sfxVolume = Math.min(1, sfxVolume + 0.1);
+    if (y > canvas.height * 0.75) {
+      musicIndex = (musicIndex + 1) % musicList.length;
+      musicList.forEach(m => m.pause());
+      musicList[musicIndex].play();
+    }
+    updateVolumes();
+  } else if (state === GAME_OVER) {
+    state = MENU;
+  }
 });
 
-canvas.addEventListener("touchmove", e => {
-  e.preventDefault();
-  touchX = e.touches[0].clientX;
-});
-
+canvas.addEventListener("touchmove", e => touchX = e.touches[0].clientX);
 canvas.addEventListener("touchend", () => touchX = null);
 
-window.addEventListener("keydown", e => {
-  if (e.key === "ArrowLeft" || e.key === "a") left = true;
-  if (e.key === "ArrowRight" || e.key === "d") right = true;
-
-  if (e.key === "Enter" && state === MENU) startGame();
-  if (e.key === "Escape") state = MENU;
-});
-
-window.addEventListener("keyup", e => {
-  if (e.key === "ArrowLeft" || e.key === "a") left = false;
-  if (e.key === "ArrowRight" || e.key === "d") right = false;
-});
-
-// ================= START =================
+// ================= START GAME =================
 function startGame() {
   player.x = canvas.width / 2 - player.w / 2;
   player.y = canvas.height - player.h - 20;
@@ -163,7 +154,7 @@ function drawStars() {
   }
 }
 
-function centerText(text, y, size = 32) {
+function center(text, y, size = 24) {
   ctx.fillStyle = "white";
   ctx.font = `${size}px sans-serif`;
   ctx.textAlign = "center";
@@ -176,20 +167,25 @@ function update() {
   drawStars();
 
   if (state === MENU) {
-    centerText("SPACE SHOOTER", canvas.height / 2 - 60, 42);
-    centerText("ENTER / TAP - START", canvas.height / 2, 18);
-    centerText("S - SETTINGS", canvas.height / 2 + 30, 16);
-    centerText("RECORD: " + record, canvas.height / 2 + 60, 16);
+    center("SPACE SHOOTER", canvas.height * 0.35, 40);
+    center("START", canvas.height * 0.5);
+    center("SETTINGS", canvas.height * 0.65);
+    center("RECORD: " + record, canvas.height * 0.8, 18);
+    return;
+  }
+
+  if (state === SETTINGS) {
+    center("SETTINGS", canvas.height * 0.2, 36);
+    center("Music -", canvas.height * 0.4);
+    center("Music +", canvas.height * 0.5);
+    center("SFX -", canvas.height * 0.6);
+    center("SFX +", canvas.height * 0.7);
+    center("Change Music", canvas.height * 0.8);
     return;
   }
 
   if (state === GAME) {
-    if (touchX !== null) {
-      player.x += (touchX - player.x - player.w / 2) * 0.15;
-    }
-    if (left) player.x -= player.speed;
-    if (right) player.x += player.speed;
-
+    if (touchX !== null) player.x += (touchX - player.x - player.w / 2) * 0.15;
     player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
 
     if (Date.now() - lastShot > 300) {
@@ -202,38 +198,37 @@ function update() {
     bullets.forEach(b => b.y -= 8);
     bullets = bullets.filter(b => b.y > -20);
 
-    if (Math.random() < 0.015) {
-      enemies.push({ x: Math.random() * (canvas.width - 48), y: -50 });
-    }
-
-    enemies.forEach(e => e.y += 2.5);
+    if (Math.random() < 0.02) enemies.push({ x: Math.random() * (canvas.width - 48), y: -50 });
+    enemies.forEach(e => e.y += 3);
 
     for (let e of enemies) {
+      if (e.y > canvas.height) {
+        gameOverSound.play();
+        if (score > record) {
+          record = score;
+          localStorage.setItem("record", record);
+        }
+        state = GAME_OVER;
+      }
       for (let b of bullets) {
-        if (
-          b.x > e.x &&
-          b.x < e.x + 48 &&
-          b.y > e.y &&
-          b.y < e.y + 48
-        ) {
-          e.y = canvas.height + 200;
-          b.y = -200;
+        if (b.x > e.x && b.x < e.x + 48 && b.y > e.y && b.y < e.y + 48) {
+          e.y = canvas.height + 100;
+          b.y = -100;
           score++;
         }
       }
     }
 
     ctx.drawImage(playerImg, player.x, player.y, player.w, player.h);
-    bullets.forEach(b => {
-      ctx.fillStyle = "yellow";
-      ctx.fillRect(b.x, b.y, 4, 10);
-    });
+    bullets.forEach(b => ctx.fillRect(b.x, b.y, 4, 10));
     enemies.forEach(e => ctx.drawImage(enemyImg, e.x, e.y, 48, 48));
 
-    ctx.fillStyle = "white";
-    ctx.font = "18px sans-serif";
-    ctx.textAlign = "left";
     ctx.fillText("Score: " + score, 10, 24);
+  }
+
+  if (state === GAME_OVER) {
+    center("GAME OVER", canvas.height * 0.45, 40);
+    center("TAP TO MENU", canvas.height * 0.55, 18);
   }
 }
 
