--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ canvas {
 <canvas id="game"></canvas>
 
 <script>
-// ================= CANVAS =================
+// ===== CANVAS =====
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
 function resize() {
   const ratio = 9 / 16;
-  let w = window.innerWidth;
-  let h = window.innerHeight;
+  const w = window.innerWidth;
+  const h = window.innerHeight;
   if (w / h > ratio) {
     canvas.height = h;
     canvas.width = h * ratio;
@@ -44,20 +44,20 @@ function resize() {
 window.addEventListener("resize", resize);
 resize();
 
-// ================= STATES =================
+// ===== STATES =====
 const MENU = 0;
 const SETTINGS = 1;
 const GAME = 2;
 const GAME_OVER = 3;
 let state = MENU;
 
-// ================= IMAGES =================
+// ===== ASSETS =====
 const playerImg = new Image();
 playerImg.src = "player.png";
 const enemyImg = new Image();
 enemyImg.src = "enemy.png";
 
-// ================= AUDIO =================
+// ===== AUDIO =====
 const musicList = [
   new Audio("music1.mp3"),
   new Audio("music2.mp3"),
@@ -82,10 +82,10 @@ function updateVolumes() {
 }
 updateVolumes();
 
-// ================= STORAGE =================
+// ===== STORAGE =====
 let record = Number(localStorage.getItem("record")) || 0;
 
-// ================= PLAYER =================
+// ===== PLAYER =====
 const player = {
   x: 0,
   y: 0,
@@ -94,23 +94,21 @@ const player = {
   speed: 7
 };
 
-// ================= GAME =================
+// ===== GAME =====
 let bullets = [];
 let enemies = [];
 let score = 0;
 let lastShot = 0;
 
-// ================= STARS =================
+// ===== STARS =====
 const stars = Array.from({ length: 120 }, () => ({
   x: Math.random(),
   y: Math.random(),
   s: Math.random() * 2 + 1
 }));
 
-// ================= INPUT =================
+// ===== INPUT =====
 let touchX = null;
-let left = false;
-let right = false;
 
 canvas.addEventListener("touchstart", e => {
   const rect = canvas.getBoundingClientRect();
@@ -119,11 +117,22 @@ canvas.addEventListener("touchstart", e => {
 
   if (state === MENU) {
     if (y > canvas.height * 0.45 && y < canvas.height * 0.55) startGame();
-    if (y > canvas.height * 0.6 && y < canvas.height * 0.7) state = SETTINGS;
-  } 
+    else if (y > canvas.height * 0.6 && y < canvas.height * 0.7) state = SETTINGS;
+  }
   else if (state === SETTINGS) {
-    if (y > canvas.height * 0.75) state = MENU;
-  } 
+    if (y > canvas.height * 0.35 && y < canvas.height * 0.42) musicVolume = Math.max(0, musicVolume - 0.1);
+    else if (y > canvas.height * 0.42 && y < canvas.height * 0.49) musicVolume = Math.min(1, musicVolume + 0.1);
+    else if (y > canvas.height * 0.49 && y < canvas.height * 0.56) sfxVolume = Math.max(0, sfxVolume - 0.1);
+    else if (y > canvas.height * 0.56 && y < canvas.height * 0.63) sfxVolume = Math.min(1, sfxVolume + 0.1);
+    else if (y > canvas.height * 0.63 && y < canvas.height * 0.7) {
+      musicList.forEach(m => m.pause());
+      musicIndex = (musicIndex + 1) % musicList.length;
+      musicList[musicIndex].play();
+    }
+    else if (y > canvas.height * 0.78) state = MENU;
+
+    updateVolumes();
+  }
   else if (state === GAME_OVER) {
     state = MENU;
   }
@@ -135,17 +144,7 @@ canvas.addEventListener("touchmove", e => {
 });
 canvas.addEventListener("touchend", () => touchX = null);
 
-window.addEventListener("keydown", e => {
-  if (e.key === "ArrowLeft" || e.key === "a") left = true;
-  if (e.key === "ArrowRight" || e.key === "d") right = true;
-  if (e.key === "Escape") state = MENU;
-});
-window.addEventListener("keyup", e => {
-  if (e.key === "ArrowLeft" || e.key === "a") left = false;
-  if (e.key === "ArrowRight" || e.key === "d") right = false;
-});
-
-// ================= START GAME =================
+// ===== START GAME =====
 function startGame() {
   player.x = canvas.width / 2 - player.w / 2;
   player.y = canvas.height - player.h - 20;
@@ -160,7 +159,7 @@ function startGame() {
   musicList[musicIndex].play();
 }
 
-// ================= DRAW =================
+// ===== DRAW =====
 function drawStars() {
   ctx.fillStyle = "white";
   for (let s of stars) {
@@ -177,7 +176,7 @@ function center(text, y, size = 24) {
   ctx.fillText(text, canvas.width / 2, y);
 }
 
-// ================= UPDATE =================
+// ===== UPDATE =====
 function update() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
   drawStars();
@@ -191,16 +190,20 @@ function update() {
   }
 
   if (state === SETTINGS) {
-    center("SETTINGS", canvas.height * 0.3, 36);
-    center("BACK", canvas.height * 0.8, 20);
+    center("SETTINGS", canvas.height * 0.25, 36);
+    center("Music -", canvas.height * 0.38);
+    center("Music +", canvas.height * 0.45);
+    center("SFX -", canvas.height * 0.52);
+    center("SFX +", canvas.height * 0.59);
+    center("Change Music", canvas.height * 0.66);
+    center("BACK", canvas.height * 0.82);
     return;
   }
 
   if (state === GAME) {
-    if (touchX !== null) player.x += (touchX - player.x - player.w / 2) * 0.15;
-    if (left) player.x -= player.speed;
-    if (right) player.x += player.speed;
-
+    if (touchX !== null) {
+      player.x += (touchX - player.x - player.w / 2) * 0.15;
+    }
     player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
 
     if (Date.now() - lastShot > 300) {
@@ -213,41 +216,32 @@ function update() {
     bullets.forEach(b => b.y -= 8);
     bullets = bullets.filter(b => b.y > -20);
 
-    if (Math.random() < 0.02 && enemies.length < 6) {
-      enemies.push({ x: Math.random() * (canvas.width - 48), y: -50 });
-    }
-
+    if (Math.random() < 0.02) enemies.push({ x: Math.random() * (canvas.width - 48), y: -50 });
     enemies.forEach(e => e.y += 3);
 
-    // === COLLISIONS ===
     for (let i = enemies.length - 1; i >= 0; i--) {
       const e = enemies[i];
 
-      // player hit
+      // проигрыш если враг долетел вниз
+      if (e.y > canvas.height) {
+        endGame();
+        return;
+      }
+
+      // столкновение
       if (
         player.x < e.x + 48 &&
         player.x + player.w > e.x &&
         player.y < e.y + 48 &&
         player.y + player.h > e.y
       ) {
-        gameOverSound.play();
-        if (score > record) {
-          record = score;
-          localStorage.setItem("record", record);
-        }
-        state = GAME_OVER;
+        endGame();
         return;
       }
 
-      // bullet hit
       for (let j = bullets.length - 1; j >= 0; j--) {
         const b = bullets[j];
-        if (
-          b.x > e.x &&
-          b.x < e.x + 48 &&
-          b.y > e.y &&
-          b.y < e.y + 48
-        ) {
+        if (b.x > e.x && b.x < e.x + 48 && b.y > e.y && b.y < e.y + 48) {
           enemies.splice(i, 1);
           bullets.splice(j, 1);
           score++;
@@ -259,7 +253,6 @@ function update() {
     ctx.drawImage(playerImg, player.x, player.y, player.w, player.h);
     bullets.forEach(b => ctx.fillRect(b.x, b.y, 4, 10));
     enemies.forEach(e => ctx.drawImage(enemyImg, e.x, e.y, 48, 48));
-
     ctx.fillText("Score: " + score, 10, 24);
   }
 
@@ -269,7 +262,16 @@ function update() {
   }
 }
 
-// ================= LOOP =================
+function endGame() {
+  gameOverSound.play();
+  if (score > record) {
+    record = score;
+    localStorage.setItem("record", record);
+  }
+  state = GAME_OVER;
+}
+
+// ===== LOOP =====
 function loop() {
   update();
   requestAnimationFrame(loop);
