--- a/index.html
+++ b/index.html
@@ -1,29 +1,3 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Space Shooter</title>
-
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  background: black;
-  overflow: hidden;
-  touch-action: none;
-  font-family: sans-serif;
-}
-canvas {
-  display: block;
-  margin: 0 auto;
-}
-</style>
-</head>
-
-<body>
-<canvas id="game"></canvas>
-
 <script>
 // ===== CANVAS =====
 const canvas = document.getElementById("game");
@@ -74,11 +48,13 @@ musicList.forEach(m => {
 
 const laserSound = new Audio("laser.wav");
 const gameOverSound = new Audio("gameover.wav");
+const recordSound = new Audio("record.wav");
 
 function updateVolumes() {
   musicList.forEach(m => m.volume = musicVolume);
   laserSound.volume = sfxVolume;
   gameOverSound.volume = sfxVolume;
+  recordSound.volume = sfxVolume;
 }
 updateVolumes();
 
@@ -86,13 +62,7 @@ updateVolumes();
 let record = Number(localStorage.getItem("record")) || 0;
 
 // ===== PLAYER =====
-const player = {
-  x: 0,
-  y: 0,
-  w: 48,
-  h: 48,
-  speed: 7
-};
+const player = { x: 0, y: 0, w: 48, h: 48 };
 
 // ===== GAME =====
 let bullets = [];
@@ -120,18 +90,7 @@ canvas.addEventListener("touchstart", e => {
     else if (y > canvas.height * 0.6 && y < canvas.height * 0.7) state = SETTINGS;
   }
   else if (state === SETTINGS) {
-    if (y > canvas.height * 0.35 && y < canvas.height * 0.42) musicVolume = Math.max(0, musicVolume - 0.1);
-    else if (y > canvas.height * 0.42 && y < canvas.height * 0.49) musicVolume = Math.min(1, musicVolume + 0.1);
-    else if (y > canvas.height * 0.49 && y < canvas.height * 0.56) sfxVolume = Math.max(0, sfxVolume - 0.1);
-    else if (y > canvas.height * 0.56 && y < canvas.height * 0.63) sfxVolume = Math.min(1, sfxVolume + 0.1);
-    else if (y > canvas.height * 0.63 && y < canvas.height * 0.7) {
-      musicList.forEach(m => m.pause());
-      musicIndex = (musicIndex + 1) % musicList.length;
-      musicList[musicIndex].play();
-    }
-    else if (y > canvas.height * 0.78) state = MENU;
-
-    updateVolumes();
+    if (y > canvas.height * 0.78) state = MENU;
   }
   else if (state === GAME_OVER) {
     state = MENU;
@@ -191,11 +150,6 @@ function update() {
 
   if (state === SETTINGS) {
     center("SETTINGS", canvas.height * 0.25, 36);
-    center("Music -", canvas.height * 0.38);
-    center("Music +", canvas.height * 0.45);
-    center("SFX -", canvas.height * 0.52);
-    center("SFX +", canvas.height * 0.59);
-    center("Change Music", canvas.height * 0.66);
     center("BACK", canvas.height * 0.82);
     return;
   }
@@ -222,13 +176,11 @@ function update() {
     for (let i = enemies.length - 1; i >= 0; i--) {
       const e = enemies[i];
 
-      // проигрыш если враг долетел вниз
       if (e.y > canvas.height) {
         endGame();
         return;
       }
 
-      // столкновение
       if (
         player.x < e.x + 48 &&
         player.x + player.w > e.x &&
@@ -253,7 +205,12 @@ function update() {
     ctx.drawImage(playerImg, player.x, player.y, player.w, player.h);
     bullets.forEach(b => ctx.fillRect(b.x, b.y, 4, 10));
     enemies.forEach(e => ctx.drawImage(enemyImg, e.x, e.y, 48, 48));
-    ctx.fillText("Score: " + score, 10, 24);
+
+    ctx.fillStyle = "white";
+    ctx.font = "16px sans-serif";
+    ctx.textAlign = "left";
+    ctx.fillText("Score: " + score, 10, 22);
+    ctx.fillText("Record: " + record, 10, 40);
   }
 
   if (state === GAME_OVER) {
@@ -263,11 +220,16 @@ function update() {
 }
 
 function endGame() {
-  gameOverSound.play();
-  if (score > record) {
+  let isNewRecord = score > record;
+
+  if (isNewRecord) {
     record = score;
     localStorage.setItem("record", record);
+    recordSound.play();
+  } else {
+    gameOverSound.play();
   }
+
   state = GAME_OVER;
 }
 
@@ -278,5 +240,3 @@ function loop() {
 }
 loop();
 </script>
-</body>
-</html>
