--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Space Shooter</title>
 
+<link rel="manifest" href="manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Space Shooter">
+<link rel="apple-touch-icon" href="icon.png">
+
 <style>
 html, body {
   margin: 0;
@@ -53,10 +59,8 @@ const GAME_OVER = 4;
 let state = MENU;
 
 // ===== ASSETS =====
-const playerImg = new Image();
-playerImg.src = "player.png";
-const enemyImg = new Image();
-enemyImg.src = "enemy.png";
+const playerImg = new Image(); playerImg.src = "player.png";
+const enemyImg  = new Image(); enemyImg.src  = "enemy.png";
 
 // ===== AUDIO =====
 const musicList = [
@@ -68,14 +72,11 @@ let musicIndex = 0;
 let musicVolume = 0.3;
 let sfxVolume = 0.4;
 
-musicList.forEach(m => {
-  m.loop = true;
-  m.volume = musicVolume;
-});
+musicList.forEach(m => { m.loop = true; m.volume = musicVolume; });
 
-const laserSound = new Audio("laser.wav");
-const gameOverSound = new Audio("gameover.wav");
-const recordSound = new Audio("record.wav");
+const laserSound   = new Audio("laser.wav");
+const gameOverSound= new Audio("gameover.wav");
+const recordSound  = new Audio("record.wav");
 
 function updateVolumes() {
   musicList.forEach(m => m.volume = musicVolume);
@@ -85,11 +86,22 @@ function updateVolumes() {
 }
 updateVolumes();
 
+// ===== iOS AUDIO UNLOCK =====
+let audioUnlocked = false;
+function unlockAudio() {
+  if (audioUnlocked) return;
+  audioUnlocked = true;
+  [...musicList, laserSound, gameOverSound, recordSound].forEach(a=>{
+    a.play().then(()=>a.pause()).catch(()=>{});
+    a.currentTime = 0;
+  });
+}
+
 // ===== STORAGE =====
 let record = Number(localStorage.getItem("record")) || 0;
 
 // ===== PLAYER =====
-const player = { x: 0, y: 0, w: 48, h: 48 };
+const player = { x:0, y:0, w:48, h:48 };
 
 // ===== GAME =====
 let bullets = [];
@@ -97,7 +109,7 @@ let enemies = [];
 let score = 0;
 let lastShot = 0;
 
-// ===== STARS =====
+// ===== STARS (SLOWER) =====
 const stars = Array.from({ length: 120 }, () => ({
   x: Math.random(),
   y: Math.random(),
@@ -108,194 +120,171 @@ const stars = Array.from({ length: 120 }, () => ({
 let touchX = null;
 
 canvas.addEventListener("touchstart", e => {
-  const rect = canvas.getBoundingClientRect();
-  const x = e.touches[0].clientX - rect.left;
-  const y = e.touches[0].clientY - rect.top;
+  unlockAudio();
+
+  const r = canvas.getBoundingClientRect();
+  const x = e.touches[0].clientX - r.left;
+  const y = e.touches[0].clientY - r.top;
   touchX = x;
 
-  if (state === MENU) {
-    if (y > canvas.height * 0.45 && y < canvas.height * 0.55) startGame();
-    else if (y > canvas.height * 0.6 && y < canvas.height * 0.7) state = SETTINGS;
-  }
-
-  else if (state === SETTINGS) {
-    if (y > canvas.height * 0.35 && y < canvas.height * 0.42) musicVolume = Math.max(0, musicVolume - 0.1);
-    else if (y > canvas.height * 0.42 && y < canvas.height * 0.49) musicVolume = Math.min(1, musicVolume + 0.1);
-    else if (y > canvas.height * 0.49 && y < canvas.height * 0.56) sfxVolume = Math.max(0, sfxVolume - 0.1);
-    else if (y > canvas.height * 0.56 && y < canvas.height * 0.63) sfxVolume = Math.min(1, sfxVolume + 0.1);
-    else if (y > canvas.height * 0.63 && y < canvas.height * 0.7) {
-      musicList.forEach(m => m.pause());
-      musicIndex = (musicIndex + 1) % musicList.length;
-      musicList[musicIndex].play();
-    }
-    else if (y > canvas.height * 0.78) state = MENU;
-
-    updateVolumes();
-  }
-
-  else if (state === GAME) {
-    if (x > canvas.width * 0.8 && y < canvas.height * 0.1) {
+  if (state === GAME) {
+    if (x > canvas.width - 50 && y < 50) {
       state = PAUSE;
       musicList[musicIndex].pause();
+      return;
     }
   }
 
+  if (state === MENU) {
+    if (y > canvas.height*0.45 && y < canvas.height*0.55) startGame();
+    else if (y > canvas.height*0.6 && y < canvas.height*0.7) state = SETTINGS;
+  }
+  else if (state === SETTINGS) {
+    if (y > canvas.height*0.35 && y < canvas.height*0.42) musicVolume=Math.max(0,musicVolume-0.1);
+    else if (y > canvas.height*0.42 && y < canvas.height*0.49) musicVolume=Math.min(1,musicVolume+0.1);
+    else if (y > canvas.height*0.49 && y < canvas.height*0.56) sfxVolume=Math.max(0,sfxVolume-0.1);
+    else if (y > canvas.height*0.56 && y < canvas.height*0.63) sfxVolume=Math.min(1,sfxVolume+0.1);
+    else if (y > canvas.height*0.63 && y < canvas.height*0.7) {
+      musicList.forEach(m=>m.pause());
+      musicIndex=(musicIndex+1)%musicList.length;
+      musicList[musicIndex].play();
+    }
+    else if (y > canvas.height*0.78) state = MENU;
+    updateVolumes();
+  }
   else if (state === PAUSE) {
     state = GAME;
     musicList[musicIndex].play();
   }
-
-  else if (state === GAME_OVER) {
-    state = MENU;
-  }
+  else if (state === GAME_OVER) state = MENU;
 });
 
 canvas.addEventListener("touchmove", e => {
-  const rect = canvas.getBoundingClientRect();
-  touchX = e.touches[0].clientX - rect.left;
+  const r = canvas.getBoundingClientRect();
+  touchX = e.touches[0].clientX - r.left;
 });
-canvas.addEventListener("touchend", () => touchX = null);
+canvas.addEventListener("touchend", ()=>touchX=null);
 
 // ===== START GAME =====
 function startGame() {
-  player.x = canvas.width / 2 - player.w / 2;
+  player.x = canvas.width/2 - player.w/2;
   player.y = canvas.height - player.h - 20;
-  bullets = [];
-  enemies = [];
-  score = 0;
-  lastShot = 0;
+  bullets=[]; enemies=[]; score=0; lastShot=0;
   state = GAME;
-
-  musicList.forEach(m => m.pause());
-  musicList[musicIndex].currentTime = 0;
+  musicList.forEach(m=>m.pause());
+  musicList[musicIndex].currentTime=0;
   musicList[musicIndex].play();
 }
 
 // ===== DRAW =====
 function drawStars() {
-  ctx.fillStyle = "white";
+  ctx.fillStyle="white";
   for (let s of stars) {
-    s.y += s.s / 300; // ⭐ медленнее
+    s.y += s.s / 300;
     if (s.y > 1) s.y = 0;
-    ctx.fillRect(s.x * canvas.width, s.y * canvas.height, s.s, s.s);
+    ctx.fillRect(s.x*canvas.width, s.y*canvas.height, s.s, s.s);
   }
 }
-
-function center(text, y, size = 24) {
-  ctx.fillStyle = "white";
-  ctx.font = `${size}px sans-serif`;
-  ctx.textAlign = "center";
-  ctx.fillText(text, canvas.width / 2, y);
+function center(t,y,s=24){
+  ctx.fillStyle="white";
+  ctx.font=`${s}px sans-serif`;
+  ctx.textAlign="center";
+  ctx.fillText(t,canvas.width/2,y);
 }
 
 // ===== UPDATE =====
 function update() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
   drawStars();
 
   if (state === MENU) {
-    center("SPACE SHOOTER", canvas.height * 0.35, 40);
-    center("START", canvas.height * 0.5);
-    center("SETTINGS", canvas.height * 0.65);
-    center("RECORD: " + record, canvas.height * 0.8, 18);
+    center("SPACE SHOOTER",canvas.height*0.35,40);
+    center("START",canvas.height*0.5);
+    center("SETTINGS",canvas.height*0.65);
+    center("RECORD: "+record,canvas.height*0.8,18);
     return;
   }
 
   if (state === SETTINGS) {
-    center("SETTINGS", canvas.height * 0.25, 36);
-    center("Music -", canvas.height * 0.38);
-    center("Music +", canvas.height * 0.45);
-    center("SFX -", canvas.height * 0.52);
-    center("SFX +", canvas.height * 0.59);
-    center("Change Music", canvas.height * 0.66);
-    center("BACK", canvas.height * 0.82);
+    center("SETTINGS",canvas.height*0.25,36);
+    center("Music -",canvas.height*0.38);
+    center("Music +",canvas.height*0.45);
+    center("SFX -",canvas.height*0.52);
+    center("SFX +",canvas.height*0.59);
+    center("Change Music",canvas.height*0.66);
+    center("BACK",canvas.height*0.82);
     return;
   }
 
   if (state === PAUSE) {
-    center("PAUSE", canvas.height * 0.45, 40);
-    center("TAP TO RESUME", canvas.height * 0.55, 18);
+    center("PAUSED",canvas.height*0.45,40);
+    center("TAP TO RESUME",canvas.height*0.55,18);
     return;
   }
 
   if (state === GAME) {
-    if (touchX !== null) {
-      player.x += (touchX - player.x - player.w / 2) * 0.15;
-    }
-    player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
+    if (touchX!==null) player.x+=(touchX-player.x-player.w/2)*0.15;
+    player.x=Math.max(0,Math.min(canvas.width-player.w,player.x));
 
-    if (Date.now() - lastShot > 500) { // 🔫 медленнее
-      bullets.push({ x: player.x + player.w / 2 - 2, y: player.y });
-      laserSound.currentTime = 0;
-      laserSound.play();
-      lastShot = Date.now();
+    if (Date.now()-lastShot>450) {
+      bullets.push({x:player.x+player.w/2-2,y:player.y});
+      laserSound.currentTime=0; laserSound.play();
+      lastShot=Date.now();
     }
 
-    bullets.forEach(b => b.y -= 8);
-    bullets = bullets.filter(b => b.y > -20);
+    bullets.forEach(b=>b.y-=8);
+    bullets=bullets.filter(b=>b.y>-20);
 
-    if (Math.random() < 0.02) enemies.push({ x: Math.random() * (canvas.width - 48), y: -50 });
-    enemies.forEach(e => e.y += 3);
+    if (Math.random()<0.02) enemies.push({x:Math.random()*(canvas.width-48),y:-50});
+    enemies.forEach(e=>e.y+=3);
 
-    for (let i = enemies.length - 1; i >= 0; i--) {
-      const e = enemies[i];
-
-      if (e.y > canvas.height ||
-        (player.x < e.x + 48 &&
-         player.x + player.w > e.x &&
-         player.y < e.y + 48 &&
-         player.y + player.h > e.y)
-      ) {
-        endGame();
-        return;
-      }
-
-      for (let j = bullets.length - 1; j >= 0; j--) {
-        const b = bullets[j];
-        if (b.x > e.x && b.x < e.x + 48 && b.y > e.y && b.y < e.y + 48) {
-          enemies.splice(i, 1);
-          bullets.splice(j, 1);
-          score++;
-          break;
+    for (let i=enemies.length-1;i>=0;i--){
+      const e=enemies[i];
+      if (e.y>canvas.height) return endGame();
+      if (player.x<e.x+48&&player.x+48>e.x&&player.y<e.y+48&&player.y+48>e.y) return endGame();
+      for (let j=bullets.length-1;j>=0;j--){
+        const b=bullets[j];
+        if (b.x>e.x&&b.x<e.x+48&&b.y>e.y&&b.y<e.y+48){
+          enemies.splice(i,1); bullets.splice(j,1); score++; break;
         }
       }
     }
 
-    ctx.drawImage(playerImg, player.x, player.y, player.w, player.h);
-    bullets.forEach(b => ctx.fillRect(b.x, b.y, 4, 10));
-    enemies.forEach(e => ctx.drawImage(enemyImg, e.x, e.y, 48, 48));
+    ctx.drawImage(playerImg,player.x,player.y,48,48);
+    bullets.forEach(b=>ctx.fillRect(b.x,b.y,4,10));
+    enemies.forEach(e=>ctx.drawImage(enemyImg,e.x,e.y,48,48));
 
-    ctx.textAlign = "left";
-    ctx.fillText("Score: " + score, 12, 22);
-    ctx.fillText("Record: " + record, 12, 40);
-    ctx.textAlign = "right";
-    ctx.fillText("PAUSE", canvas.width - 12, 22);
+    ctx.font="16px sans-serif"; ctx.textAlign="left";
+    ctx.fillText("Score: "+score,12,22);
+    ctx.fillText("Record: "+record,12,40);
+
+    ctx.textAlign="right";
+    ctx.fillText("⏸",canvas.width-16,30);
   }
 
   if (state === GAME_OVER) {
-    center("GAME OVER", canvas.height * 0.45, 40);
-    center("TAP TO MENU", canvas.height * 0.55, 18);
+    center("GAME OVER",canvas.height*0.45,40);
+    center("TAP TO MENU",canvas.height*0.55,18);
   }
 }
 
-function endGame() {
-  const isNewRecord = score > record;
-  if (isNewRecord) {
-    record = score;
-    localStorage.setItem("record", record);
-    recordSound.play();
+function endGame(){
+  musicList[musicIndex].pause();
+  if (score>record){
+    record=score;
+    localStorage.setItem("record",record);
+    recordSound.currentTime=0; recordSound.play();
   } else {
-    gameOverSound.play();
+    gameOverSound.currentTime=0; gameOverSound.play();
   }
-  state = GAME_OVER;
+  state=GAME_OVER;
 }
 
 // ===== LOOP =====
-function loop() {
+(function loop(){
   update();
   requestAnimationFrame(loop);
-}
-loop();
+})();
 </script>
 </body>
 </html>
